--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: sampleapp
-        image: mnonyeizu/sampleapp:latest
+        image: mnonyeizu/sampleapp:v1
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
