--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: sampleapp
-        image: mnonyeizu/sampleapp
+        image: mnonyeizu/sampleapp:${BUILD_TAG}
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
